[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Client.gd" type="Script" id=1]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/Lobby.gd" type="Script" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Client" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Start" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="Start"]
margin_left = 517.274
margin_top = 269.138
margin_right = 559.274
margin_bottom = 289.138
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectButton" type="Button" parent="Start"]
margin_left = 507.463
margin_top = 295.949
margin_right = 571.463
margin_bottom = 315.949
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecretInput" type="LineEdit" parent="Start/ConnectButton"]
margin_left = -179.0
margin_top = -2.22723
margin_right = -10.0
margin_bottom = 21.7728
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Start/ConnectButton/SecretInput"]
margin_left = -46.9639
margin_top = 3.8924
margin_right = 2.0361
margin_bottom = 21.8924
text = "Secret:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserInput" type="LineEdit" parent="Start"]
margin_left = 328.463
margin_top = 265.722
margin_right = 497.463
margin_bottom = 289.722
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Start/UserInput"]
margin_left = -46.9639
margin_top = 3.8924
margin_right = 2.0361
margin_bottom = 21.8924
text = "Name:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDiag" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0

[node name="Lobby" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="Label" parent="Lobby"]
margin_left = 484.499
margin_top = 213.706
margin_right = 599.499
margin_bottom = 227.706
text = "Gente Conectada:"
align = 1
valign = 1

[node name="SecretEdit" type="LineEdit" parent="Lobby"]
margin_left = 536.921
margin_top = 186.0
margin_right = 745.921
margin_bottom = 210.0
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecretLabel" type="Label" parent="Lobby/SecretEdit"]
margin_left = -52.0
margin_top = 5.0
margin_right = -8.0
margin_bottom = 19.0
text = "Secret:"

[node name="StartButton" type="Button" parent="Lobby"]
margin_left = 390.921
margin_top = 186.757
margin_right = 472.921
margin_bottom = 206.757
text = "Start round"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisconnectButton" type="Button" parent="Lobby"]
margin_left = 390.921
margin_top = 219.757
margin_right = 474.921
margin_bottom = 239.757
text = "Disconnect"
[connection signal="disconnected" from="Client" to="." method="_on_Client_disconnected"]
[connection signal="lobby_joined" from="Client" to="." method="_on_Client_lobby_joined"]
[connection signal="pressed" from="Start/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Start/ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="Lobby/StartButton" to="Lobby" method="_on_StartButton_pressed"]
